# wazuh

src/: Makefile
src/client-agent/: agentd.c  event-forward.c  filter.c  filter.h
src/client-agent/detect/: detect.c  detect.h  detect_buffer.c  filter_rule.json  formatter.c  main.c  matcher.c  output.json  rule.c  rule.h  util.h
src/client-agent/detect/detect/: sedexp-udev.json  systemd-file.json  webshell.json
src/client-agent/detect/filter/: apparmor.json  debug.json  trace.json
src/client-agent/detectmon/: CMakeLists.txt  detect.c  detect.h  matcher.c  rule.c  rule.h  rule.json  util.c
src/headers/: shared.h
